--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "dotpay/PHP-SDK",
-    "version": "1.0.3",
+    "name": "dotpay/php-sdk",
+    "version": "1.0.4",
     "description": "Universal API to creating payment gateways for e-commerce thanks to Dotpay services",
     "keywords": [
         "dotpay",
