--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dotpay/php-sdk",
-    "version": "1.0.11",
+    "version": "1.0.13",
     "description": "Universal API to creating payment gateways for e-commerce thanks to Dotpay services",
     "keywords": [
         "dotpay",
@@ -8,7 +8,7 @@
         "ecommerce",
         "api"
     ],
-    "homepage": "http://dotpay.pl",
+    "homepage": "https://dotpay.pl",
     "license": "MIT",
     "authors": [{
         "name": "Dotpay sp. z o.o.",
